# starboard

./: .cursorrules  .env.clean.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RESTART_SERVER.sh  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  test.db-shm  test.db-wal
.cursor/: 01_engineering_standards.md  02_agents_and_architecture.md  03_prompts_and_schemas.md  04_testing_and_evals.md  05_observability_and_cost.md  06_security_and_privacy.md  07_project_structure_and_tooling.md  08_frontend_standards.md  09_mcp_standards.md
.cursor/prompts/: commit.md  debug.md  feature.md
.githooks/: install.sh  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
changes/feat/: multi-turn-conversation-design.md
changes/fix/phase-01-security-hardening/: ADR-001-databricks-auth-session-validation.md
changes/ops/phase-06-observability-operations/: BACKPRESSURE.md  HANDOFF.md  HEALTH_CHECKS.md  POOL_METRICS.md  TODO_AUDIT.md
changes/refactor/phase-03-decompose-god-classes/: API_MAPPING.md  DECOMPOSITION.md  HANDOFF.md  MIGRATION_GUIDE.md
data/checkpoints/: 01_extracted_metadata.json  02_enriched_metadata.json
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  CLOUD_AUTHENTICATION.md  CONFIGURATION.md  DEPLOYMENT.md  FRONTEND_ARCHITECTURE.md  INTERRUPTIBLE_REASONING.md  MAKEFILE_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  RUNBOOK.md  S3_CONNECTOR_GUIDE.md  SKILLS.md  TEMPLATE_USAGE_GUIDE.md  TESTING.md  TOKEN_BUDGET.md  TOOL_ARCHITECTURE.md  documentation_audit.json  documentation_plan.json  index.md  validation_report.md  wave_20260329_review_report.md
docs/admin/: backup-recovery.md  capacity-planning.md  cost-estimation.md  monitoring.md  security-hardening.md  state-backends.md
docs/agents/: README.md
docs/agents/domain/: analytics.md  cluster.md  diagnostic.md  discovery.md  job.md  query.md  uc.md  warehouse.md
docs/agents/framework/: intent.md
docs/api/: API_REFERENCE.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/contracts/: AGENT_OUTPUT_CONSUMERS.md
docs/developer/: release-process.md
docs/developer/agent/: IMPLEMENTATION_GUIDE.md  README.md  REPORT_UI_GUIDELINES.md
docs/developer/standards/: engineering.md  observability.md  prompts-schemas.md  security.md  testing-evals.md
docs/diagrams/: visualization_simplification.mmd
docs/guides/: COMMON_TASKS.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md
docs/integration/: PACKAGE_INTEGRATION.md  api-quickstart.md  sse-streaming.md
docs/overview/: agents.md  changelog.md  glossary.md  what-is-starboard.md
docs/runbooks/: capacity_planning_template.md  incident_template.md  rollback_template.md
docs/testing/: CLUSTER_AGENT_TEST_PROMPTS.md
docs/tools/: TOOL_CATALOG.md  TOOL_DEVELOPMENT_GUIDE.md
docs/user-guide/: cli.md  interruptible-reasoning.md  sdk.md  troubleshooting.md  understanding-reports.md  web-ui.md
docs/user-guide/workflows/: cluster-optimization.md  cost-analysis.md  job-debugging.md  query-optimization.md  table-governance.md  warehouse-optimization.md  workspace-discovery.md
evals/: README.md  __init__.py
evals/datasets/: __init__.py  analytics_basic.json  compute_basic.json  job_basic.json  query_basic.json  uc_basic.json  warehouse_basic.json
evals/metrics/: __init__.py  evaluator.py
evals/runners/: __init__.py  batch_runner.py  ci_runner.py
examples/: Starboard AI Agent - Workspace Discovery.ipynb  Starboard AI Agent.ipynb  claude-desktop-config.json  cursor-mcp.json  env.example  starboard-mcp-config.json
frontend/: .npmrc.example  AGENTS.md  README.md  jest.config.ts  next.config.ts  package-lock.json  package.json
frontend/__mocks__/: react-hotkeys-hook.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/app/chat/: page.tsx
frontend/app/config/: ConfigPageClient.tsx  page.tsx
frontend/components/chat/: AgentBadge.tsx  ChatContainer.tsx  ChatErrorBoundary.tsx  ChatLayout.tsx  ClarificationDialog.tsx  CodeBlockWithActions.tsx  ConversationCostSummary.tsx  ExportMenu.tsx  FeedbackWidget.tsx  FileAttachmentChip.tsx  FilePreviewDialog.tsx  FileUploadButton.tsx  InlineToolCall.tsx  index.ts  (+15 more)
frontend/docs/: DEBUG_LOGGING.md  ENV_SETUP.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
scripts/: AGENTS.md  README_BUILD_RAG.md  README_EXPORT_VECTOR_STORE.md  analyze_test_coverage.py  build_rag_vector_store.py  check_doc_staleness.py  clear_cache.py  databricks_deploy.sh  debug_browser.py  export_api_schemas.py  export_vector_store_snapshot.py  generate_diagrams.py  generate_test_template.py  generate_types.py  install-hooks.sh  mirror-public.sh  setup-mcp.sh  setup_databricks_lakebase.py  setup_databricks_secrets.sh  test.py  test_copy.py  test_inmemory_bootstrap.py  update_coverage_badge.py  validate_doc_links.py  validate_prompt_alignment.py  verify_bootstrap_export.py  verify_precomputed_embeddings.py
tests/: AGENTS.md  conftest.py
tests/architecture/: __init__.py  conftest.py  test_dependency_hygiene.py  test_function_length.py  test_layer_violations.py  test_logging_compliance.py  test_mcp_contract.py  test_no_unused_dependencies.py  test_package_boundaries.py  test_prompt_construction.py  test_sdk_public_api.py  test_state_store_protocol_compliance.py  test_tool_error_format.py
tests/benchmarks/: __init__.py
tests/contract/: README.md  __init__.py  test_agent_output_contract.py  test_api_schemas.py  test_api_schemas_simple.py  test_next_step_contract.py
tests/golden/: test_analytics_edge_case_prompts.py  test_analytics_prompts.py  test_cluster_prompts.py  test_diagnostic_prompts.py  test_discovery_v2_prompts.py  test_job_prompts.py  test_query_prompts.py  test_router_prompts.py  test_uc_prompts.py  test_visualization_prompts.py  test_warehouse_prompts.py
tests/integration/: test_data_cache_integration.py  test_main.py
(+445 files in other folders)
