# =============================================================================
# uv workspace root — NOT an installable package
# =============================================================================
#
# This root pyproject.toml is the uv workspace coordinator for local development.
# Individual packages are installed from their own directories:
#   pip install packages/starboard/        # full: CLI + MCP server + all agents
#   pip install packages/starboard-core/   # pure domain + log parsing
#   pip install packages/starboard-skills/ # lightweight helpers + Claude skills
#
# The [project] section below uses a distinct name ("starboard-meta") to avoid
# conflicting with the "starboard" workspace member in packages/starboard/.
# =============================================================================

[project]
name = "starboard-meta"
version = "0.1.0"
description = "Starboard AI Agent - AI-powered Databricks workload analysis and optimization"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Databricks Open Model License"}
dependencies = [
    "detect-secrets>=1.5.0",
]

[project.optional-dependencies]
core = [
    "pydantic>=2.12.3",
    "typing-extensions>=4.14.1",
]

server = [
    "starboard[core]",
    # FastAPI stack
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6",
    # Databricks & LLM
    "databricks-sdk>=0.73.0,<1.0.0",
    "databricks-sql-connector>=3.0.0",
    "openai>=2.6.0,<3.0.0",
    "tiktoken>=0.12.0",
    # Data processing
    "pandas>=2.3.3,<3.0.0",
    "polars>=1.17.0,<2.0.0",
    "pyarrow>=18.0.0,<20.0.0",
    "numpy>=1.24.0,<3.0.0",
    "sqlglot>=27.29.0,<28.0.0",
    # Data visualization
    "altair>=5.0.0,<6.0.0",
    "vl-convert-python>=1.0.0,<2.0.0",
    # Configuration
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # Infrastructure
    "httpx>=0.28.1,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.3",
    "rich>=13.0.0,<14.0.0",
    "structlog>=24.0.0",
    "redis>=5.0.0,<6.0.0",
    "slowapi>=0.1.9,<1.0.0",
    # Database
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.3.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "sqlite-vec>=0.1.1,<1.0.0",
    # MCP protocol
    "mcp>=1.19.0,<2.0.0",
    "orjson>=3.11.4",
    "aiofiles>=24.1",
    # Observability (core tracing)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

cli = [
    "starboard[server]",
]

sdk = [
    "starboard[server]",
]

all = [
    "starboard[server,cli,sdk]",
]

[project.scripts]
starboard = "starboard.cli.main:main"
starboard-server = "starboard.main:run"
starboard-mcp = "starboard.mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/starboard-core/starboard_core",
    "packages/starboard/starboard",
]

# =============================================================================
# uv workspace (local development only)
# =============================================================================

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/starboard-core",
    "packages/starboard",
    "packages/starboard-skills",
]

[tool.uv.sources]
starboard-core = { workspace = true }
starboard = { workspace = true }
starboard-skills = { workspace = true }

# =============================================================================
# Tool configurations
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # function calls in argument defaults
    "B905",  # zip without explicit strict
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "B017"]  # Allow assert, unused args, bare exceptions in tests
"**/tests/**/*.py" = ["ARG", "S101", "B017"]  # Allow assert, unused args, bare exceptions in all test files
"scripts/*.py" = ["ARG001", "SIM102", "SIM105"]  # Scripts may have unused args, intentional nested ifs, and try-except-pass

[tool.mypy]
python_version = "3.12"
# Incrementally enable strict checking - disabled for now due to many legacy issues
strict = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]
# Exclude package-level tests/conftest to avoid duplicate module errors in monorepo
# Also exclude experiment directories (prototype code)
exclude = [
    "^packages/.*/tests/",
    "^packages/.*/conftest\\.py$",
    "^packages/starboard/experiment/",
    "^scripts/",
    "^tests/",
    "^changes/",
    "\\.ipynb$",
]

# Type checking settings
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
check_untyped_defs = true

# Allow incremental typing adoption
[[tool.mypy.overrides]]
module = [
    "databricks.*",
    "sqlglot.*",
    "asyncpg.*",
    "pandas.*",
    "requests.*",
    "psycopg2.*",
    "pyarrow.*",
    "sqlite_vec.*",
    "starboard_core.*",
    "polars.*",
    "openai.*",
    "structlog.*",
    "aiohttp.*",
    "redis.*",
    "aiosqlite.*",
    "starboard.infra.config",
    "starboard.repositories.conversation_repository",
    "starboard.agents.multi_agent_manager",
    "starboard.agents.config.agent_config",
    # Missing stubs for optional/dev dependencies
    "boto3.*",
    "botocore.*",
    "pyspark.*",
    "matplotlib.*",
    "prophet.*",
    "sklearn.*",
    "playwright.*",
    "yaml",
]
ignore_missing_imports = true

# Scripts have complex types from external libs
[[tool.mypy.overrides]]
module = "starboard.tools.domain.analytics.scripts.*"
ignore_errors = true

# Experiment directory is prototype code - skip type checking
[[tool.mypy.overrides]]
module = "starboard.experiment.*"
ignore_errors = true

# Log parser has legacy type issues - skip strict checking
[[tool.mypy.overrides]]
module = "starboard_core.log_parser.*"
ignore_errors = true

[tool.basedpyright]
exclude = ["**/*.ipynb", "examples/"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may call external services)",
    "golden: Golden/snapshot tests for prompts",
    "slow: Tests that take >1s to run",
]

[tool.coverage.run]
branch = true
source = ["starboard_core", "starboard"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[[tool.uv.index]]
name = "databricks-proxy"
url = "https://pypi-proxy.dev.databricks.com/simple/"
default = true
